Refactor UI elements and styles for departure app
- Updated header title to "Departures from Svedmyra" for clarity.
- Moved line information display in app.js for improved layout.
- Reintroduced refresh button in a new bottom controls section for better accessibility.
- Enhanced CSS styles for background, controls, and text elements to improve visual consistency and responsiveness.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
 <body>
     <div class="container">
         <header>
-            <h1>🚇 Svedmyra Tunnelbana</h1>
+            <h1>Departures from Svedmyra</h1>
             <p class="subtitle">Next departures towards T-Centralen</p>
         </header>
 
         <div class="controls">
-            <button id="refresh-btn" class="refresh-button">
-                <span class="refresh-icon">🔄</span>
-                Refresh
-            </button>
             <div class="last-updated">
                 Last updated: <span id="last-updated-time">Never</span>
             </div>
@@ -42,6 +38,13 @@
         <div class="info">
             <p>⏱️ Auto-refresh every minute</p>
             <p>🎯 Showing next 4 departures to T-Centralen</p>
+        </div>
+
+        <div class="bottom-controls">
+            <button id="refresh-btn" class="refresh-button">
+                <span class="refresh-icon">🔄</span>
+                Refresh
+            </button>
         </div>
     </div>
 
